--- a/index.html
+++ b/index.html
@@ -41,6 +41,57 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+	<h3>CEVWS-Competitive Coding</h3>
+		<h1>Syllabus</h1>
+		<h5 style="text-align: right;">Instructors:</h5>
+			<h4 style="text-align: right;"><a href="https://www.linkedin.com/in/khokharnikunj8/">Nikunj Khokhar</a></h4>
+			<h4 style="text-align: right;"><a href="https://www.linkedin.com/in/jenish-patel-4b1645140/">Jenish Patel</a></h4>
+                <h5 style="text-align: right;">Mentor:</h5>
+			<h4 style="text-align: right;"><a href="https://www.linkedin.com/in/akash-gangani-14a785168/">Akash Gangani</a></h4>  	        
+	</div>
+		<div class="container" style="padding:40px;">
+		<h6>Day 1: (12<sup>th</sup> Dec)</h6>
+		<ul>
+			<li>Basic Programming</li>
+			<li>Time Complexity</li>
+			<li>Bit Manipulation</li>
+			<li>Recursion</li>
+		</ul>
+		<hr>
+		<h6>Day 2: (13<sup>th</sup> Dec)</h6>
+		<ul>
+			<li>Searching</li>
+			<li>Sorting</li>
+		</ul>
+		<hr>
+
+		<h6>Day 3: (14<sup>th</sup> Dec)</h6>
+		<ul>
+			<li>Stack, Queue, Linked List, Map, Set</li>
+			<li>Standard Template Library (STL)</li>
+		</ul>
+		<hr>
+
+		<h6>Day 4: (15<sup>th</sup> Dec)</h6>
+		<ul>
+			<li>Graphs</li>
+			<li>Trees</li>
+		</ul>
+		<hr>
+
+		<h6>Day 5: (16<sup>th</sup> Dec)</h6>
+		<ul>
+			<li>Mathematics</li>
+		</ul>
+		<hr>
+		<h6>Day 6: (16<sup>th</sup> Dec)</h6>
+		<ul>
+			<li>Dynamic Programming</li>
+		</ul>
+		<hr>
+</div>
+		<div class="container">
+	
 		<div class="container">
 		<div class="jumbotron">
 			<h1>Resources</h1>
