--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+	<div class="container">
+	<div class="jumbotron">
 	<h3>CEVWS-Competitive Coding</h3>
 		<h1>Syllabus</h1>
 		<h5 style="text-align: right;">Instructors:</h5>
